# CONFIG_MANAGER

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  test_example.py
.github/workflow/: python-package.yml
src/config_manager/: __init__.py  config.py  exceptions.py
src/config_manager.egg-info/: PKG-INFO  SOURCES.txt
src/config_manager/configs/: config.json
src/config_manager/loaders/: __init__.py  base_loader.py  env_loader.py  json_loader.py
src/tests/: test_config.py
src/tests/test_loaders/: test_env_loader.py  test_json_loader.py
